# tech42

./: .clangd  .gitignore  CMakeLists.txt  fips.yml
code/: .clang-format  CMakeLists.txt  main.c  sokol.c
code/qcommon/: q_platform.h  q_shared.h  qcommon.h
code/sys/: sys_local.h  sys_main.c  sys_unix.c  sys_win32.c
